grid creation done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <button id="resetBtn">Reset</button>
+    <p>max number that can be provided is 25</p>
     <div id="mainBox"></div>
     <script src="script.js"></script>
 </body>
