square color changes when hovered(mouseover)

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <p>provide a number for grid length</p>
     <button id="resetBtn">Reset</button>
-    <p>max number that can be provided is 25</p>
+
     <div id="mainBox"></div>
     <script src="script.js"></script>
 </body>
