added some text for maximum input

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>provide a number for grid length</p>
+    <p>provide a number for grid length, input cant be more than 100</p>
     <button id="resetBtn">Reset</button>
 
     <div id="mainBox"></div>
